# Advanced-Computer-Graphics-implementation

./: .gitignore  CMakeLists.txt  README.md  beihaiting.jfif  halftone.py
.history/src/: main_20230611171348.cpp  main_20230611182704.cpp
gco/: CMakeLists.txt  makefile
gco/include/: GCoptimization.h
gco/src/: example.cpp
img/: beihaiting.jfif:Zone.Identifier
src/: .gitignore  ImpMap.cpp  Pat_relia_eva.py  adaptive_filter.py  data.py  energeCaculator.py  halftone.cpp  main.cpp  optimize.cpp  pre_process.py
src/ImpMap/: ImpMap.cpp
src/energy/: energy.cpp
src/halftone/: analysis.cpp  halftone.cpp  lookup.cpp  saed.cpp  util.cpp
src/include/ImpMap/: ImpMap.h
src/include/energy/: energy.h
src/include/halftone/: analysis.h  halftone.h  lookup.h  saed.h  util.h
src/include/halftone/calib/: ker16.h  ker32.h  ker4.h  ker8.h  std.h
src/include/optimize/: optimize.h
src/include/pre_process/: pre_process.h
src/include/qrcode/: bitstream.h  config.h  mask.h  mmask.h  qrcode.h
src/optimize/: optimize.cpp
src/pre_process/: pre_process.cpp
src/qrcode/: bitstream.cpp  mask.cpp  mmask.cpp  mqrspec.cpp  qrcode.cpp  qrencode.cpp  qrinput.cpp  qrspec.cpp  rsecc.cpp  split.cpp
video/res/: output_video.avi
能量最小化相关代码/: ImageSplitter.py  test.py
